// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@xsai-ext/responses basic > basic 1`] = `"Hello! I'm glad you reached out. How can I help you today? Whether it's asking for help with a task, you need some information, or you just want to chat—just let me know! 😊"`;

exports[`@xsai-ext/responses basic > basic 2`] = `"The user is greeting me. I need to acknowledge this greeting and offer assistance. I should respond in a friendly and engaging manner, showing interest in what the user needs help with."`;

exports[`@xsai-ext/responses basic > basic 3`] = `
[
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777981023,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_409485",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 0,
    "type": "response.created",
  },
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777981023,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_409485",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 1,
    "type": "response.in_progress",
  },
  {
    "item": {
      "id": "rs_628708",
      "summary": [],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 2,
    "type": "response.output_item.added",
  },
  {
    "delta": "The",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 3,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " user",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 4,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " is",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 5,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " greeting",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 6,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 7,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 8,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 9,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " need",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 10,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 11,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " acknowledge",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 12,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " this",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 13,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " greeting",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 14,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 15,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " offer",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 16,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " assistance",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 17,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 18,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 19,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " should",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 20,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " respond",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 21,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " in",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 22,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " a",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 23,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " friendly",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 24,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 25,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " engaging",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 26,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " manner",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 27,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 28,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " showing",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 29,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " interest",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 30,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " in",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 31,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " what",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 32,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 33,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " user",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 34,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " needs",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 35,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " help",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 36,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " with",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 37,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 38,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "item_id": "rs_628708",
    "output_index": 0,
    "sequence_number": 39,
    "summary_index": 0,
    "text": "The user is greeting me. I need to acknowledge this greeting and offer assistance. I should respond in a friendly and engaging manner, showing interest in what the user needs help with.",
    "type": "response.reasoning_summary_text.done",
  },
  {
    "item": {
      "encrypted_content": "The user is greeting me. I need to acknowledge this greeting and offer assistance. I should respond in a friendly and engaging manner, showing interest in what the user needs help with.",
      "id": "rs_628708",
      "summary": [
        {
          "text": "The user is greeting me. I need to acknowledge this greeting and offer assistance. I should respond in a friendly and engaging manner, showing interest in what the user needs help with.",
          "type": "summary_text",
        },
      ],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 40,
    "type": "response.output_item.done",
  },
  {
    "item": {
      "content": [],
      "id": "msg_282650",
      "role": "assistant",
      "status": "in_progress",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 41,
    "type": "response.output_item.added",
  },
  {
    "content_index": 0,
    "item_id": "msg_282650",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "",
      "type": "output_text",
    },
    "sequence_number": 42,
    "type": "response.content_part.added",
  },
  {
    "content_index": 0,
    "delta": "Hello",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 43,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "!",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 44,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " I",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 45,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "'m",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 46,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " glad",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 47,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 48,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " reached",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 49,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " out",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 50,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ".",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 51,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " How",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 52,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " can",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 53,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " I",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 54,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " help",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 55,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 56,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " today",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 57,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "?",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 58,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " Whether",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 59,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " it",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 60,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "'s",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 61,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " asking",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 62,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " for",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 63,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " help",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 64,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " with",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 65,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " a",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 66,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " task",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 67,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ",",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 68,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 69,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " need",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 70,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " some",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 71,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " information",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 72,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ",",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 73,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " or",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 74,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 75,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " just",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 76,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " want",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 77,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " to",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 78,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " chat",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 79,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "—",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 80,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "just",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 81,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " let",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 82,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " me",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 83,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " know",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 84,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "!",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 85,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " 😊",
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 86,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "item_id": "msg_282650",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 87,
    "text": "Hello! I'm glad you reached out. How can I help you today? Whether it's asking for help with a task, you need some information, or you just want to chat—just let me know! 😊",
    "type": "response.output_text.done",
  },
  {
    "content_index": 0,
    "item_id": "msg_282650",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "Hello! I'm glad you reached out. How can I help you today? Whether it's asking for help with a task, you need some information, or you just want to chat—just let me know! 😊",
      "type": "output_text",
    },
    "sequence_number": 88,
    "type": "response.content_part.done",
  },
  {
    "item": {
      "content": [
        {
          "annotations": [],
          "logprobs": [],
          "text": "Hello! I'm glad you reached out. How can I help you today? Whether it's asking for help with a task, you need some information, or you just want to chat—just let me know! 😊",
          "type": "output_text",
        },
      ],
      "id": "msg_282650",
      "role": "assistant",
      "status": "completed",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 89,
    "type": "response.output_item.done",
  },
  {
    "response": {
      "background": false,
      "completed_at": 1777981023,
      "created_at": 1777981023,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_409485",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [
        {
          "encrypted_content": "The user is greeting me. I need to acknowledge this greeting and offer assistance. I should respond in a friendly and engaging manner, showing interest in what the user needs help with.",
          "id": "rs_628708",
          "summary": [
            {
              "text": "The user is greeting me. I need to acknowledge this greeting and offer assistance. I should respond in a friendly and engaging manner, showing interest in what the user needs help with.",
              "type": "summary_text",
            },
          ],
          "type": "reasoning",
        },
        {
          "content": [
            {
              "annotations": [],
              "logprobs": [],
              "text": "Hello! I'm glad you reached out. How can I help you today? Whether it's asking for help with a task, you need some information, or you just want to chat—just let me know! 😊",
              "type": "output_text",
            },
          ],
          "id": "msg_282650",
          "role": "assistant",
          "status": "completed",
          "type": "message",
        },
      ],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "completed",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": {
        "input_tokens": 23,
        "input_tokens_details": {
          "cached_tokens": 0,
        },
        "output_tokens": 85,
        "output_tokens_details": {
          "reasoning_tokens": 0,
        },
        "total_tokens": 108,
      },
    },
    "sequence_number": 90,
    "type": "response.completed",
  },
]
`;

exports[`@xsai-ext/responses basic > basic 4`] = `
[
  {
    "type": "step.start",
  },
  {
    "outputIndex": 0,
    "type": "reasoning.start",
  },
  {
    "delta": "The",
    "type": "reasoning.delta",
  },
  {
    "delta": " user",
    "type": "reasoning.delta",
  },
  {
    "delta": " is",
    "type": "reasoning.delta",
  },
  {
    "delta": " greeting",
    "type": "reasoning.delta",
  },
  {
    "delta": " me",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "delta": " I",
    "type": "reasoning.delta",
  },
  {
    "delta": " need",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " acknowledge",
    "type": "reasoning.delta",
  },
  {
    "delta": " this",
    "type": "reasoning.delta",
  },
  {
    "delta": " greeting",
    "type": "reasoning.delta",
  },
  {
    "delta": " and",
    "type": "reasoning.delta",
  },
  {
    "delta": " offer",
    "type": "reasoning.delta",
  },
  {
    "delta": " assistance",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "delta": " I",
    "type": "reasoning.delta",
  },
  {
    "delta": " should",
    "type": "reasoning.delta",
  },
  {
    "delta": " respond",
    "type": "reasoning.delta",
  },
  {
    "delta": " in",
    "type": "reasoning.delta",
  },
  {
    "delta": " a",
    "type": "reasoning.delta",
  },
  {
    "delta": " friendly",
    "type": "reasoning.delta",
  },
  {
    "delta": " and",
    "type": "reasoning.delta",
  },
  {
    "delta": " engaging",
    "type": "reasoning.delta",
  },
  {
    "delta": " manner",
    "type": "reasoning.delta",
  },
  {
    "delta": ",",
    "type": "reasoning.delta",
  },
  {
    "delta": " showing",
    "type": "reasoning.delta",
  },
  {
    "delta": " interest",
    "type": "reasoning.delta",
  },
  {
    "delta": " in",
    "type": "reasoning.delta",
  },
  {
    "delta": " what",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " user",
    "type": "reasoning.delta",
  },
  {
    "delta": " needs",
    "type": "reasoning.delta",
  },
  {
    "delta": " help",
    "type": "reasoning.delta",
  },
  {
    "delta": " with",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "text": "The user is greeting me. I need to acknowledge this greeting and offer assistance. I should respond in a friendly and engaging manner, showing interest in what the user needs help with.",
    "type": "reasoning.done",
  },
  {
    "outputIndex": 1,
    "type": "text.start",
  },
  {
    "delta": "Hello",
    "type": "text.delta",
  },
  {
    "delta": "!",
    "type": "text.delta",
  },
  {
    "delta": " I",
    "type": "text.delta",
  },
  {
    "delta": "'m",
    "type": "text.delta",
  },
  {
    "delta": " glad",
    "type": "text.delta",
  },
  {
    "delta": " you",
    "type": "text.delta",
  },
  {
    "delta": " reached",
    "type": "text.delta",
  },
  {
    "delta": " out",
    "type": "text.delta",
  },
  {
    "delta": ".",
    "type": "text.delta",
  },
  {
    "delta": " How",
    "type": "text.delta",
  },
  {
    "delta": " can",
    "type": "text.delta",
  },
  {
    "delta": " I",
    "type": "text.delta",
  },
  {
    "delta": " help",
    "type": "text.delta",
  },
  {
    "delta": " you",
    "type": "text.delta",
  },
  {
    "delta": " today",
    "type": "text.delta",
  },
  {
    "delta": "?",
    "type": "text.delta",
  },
  {
    "delta": " Whether",
    "type": "text.delta",
  },
  {
    "delta": " it",
    "type": "text.delta",
  },
  {
    "delta": "'s",
    "type": "text.delta",
  },
  {
    "delta": " asking",
    "type": "text.delta",
  },
  {
    "delta": " for",
    "type": "text.delta",
  },
  {
    "delta": " help",
    "type": "text.delta",
  },
  {
    "delta": " with",
    "type": "text.delta",
  },
  {
    "delta": " a",
    "type": "text.delta",
  },
  {
    "delta": " task",
    "type": "text.delta",
  },
  {
    "delta": ",",
    "type": "text.delta",
  },
  {
    "delta": " you",
    "type": "text.delta",
  },
  {
    "delta": " need",
    "type": "text.delta",
  },
  {
    "delta": " some",
    "type": "text.delta",
  },
  {
    "delta": " information",
    "type": "text.delta",
  },
  {
    "delta": ",",
    "type": "text.delta",
  },
  {
    "delta": " or",
    "type": "text.delta",
  },
  {
    "delta": " you",
    "type": "text.delta",
  },
  {
    "delta": " just",
    "type": "text.delta",
  },
  {
    "delta": " want",
    "type": "text.delta",
  },
  {
    "delta": " to",
    "type": "text.delta",
  },
  {
    "delta": " chat",
    "type": "text.delta",
  },
  {
    "delta": "—",
    "type": "text.delta",
  },
  {
    "delta": "just",
    "type": "text.delta",
  },
  {
    "delta": " let",
    "type": "text.delta",
  },
  {
    "delta": " me",
    "type": "text.delta",
  },
  {
    "delta": " know",
    "type": "text.delta",
  },
  {
    "delta": "!",
    "type": "text.delta",
  },
  {
    "delta": " 😊",
    "type": "text.delta",
  },
  {
    "text": "Hello! I'm glad you reached out. How can I help you today? Whether it's asking for help with a task, you need some information, or you just want to chat—just let me know! 😊",
    "type": "text.done",
  },
  {
    "output": [
      {
        "encrypted_content": "The user is greeting me. I need to acknowledge this greeting and offer assistance. I should respond in a friendly and engaging manner, showing interest in what the user needs help with.",
        "id": "rs_628708",
        "summary": [
          {
            "text": "The user is greeting me. I need to acknowledge this greeting and offer assistance. I should respond in a friendly and engaging manner, showing interest in what the user needs help with.",
            "type": "summary_text",
          },
        ],
        "type": "reasoning",
      },
      {
        "content": [
          {
            "annotations": [],
            "logprobs": [],
            "text": "Hello! I'm glad you reached out. How can I help you today? Whether it's asking for help with a task, you need some information, or you just want to chat—just let me know! 😊",
            "type": "output_text",
          },
        ],
        "id": "msg_282650",
        "role": "assistant",
        "status": "completed",
        "type": "message",
      },
    ],
    "type": "step.done",
    "usage": {
      "input_tokens": 23,
      "input_tokens_details": {
        "cached_tokens": 0,
      },
      "output_tokens": 85,
      "output_tokens_details": {
        "reasoning_tokens": 0,
      },
      "total_tokens": 108,
    },
  },
]
`;

exports[`@xsai-ext/responses basic > basic 5`] = `
{
  "input_tokens": 23,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 85,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 108,
}
`;

exports[`@xsai-ext/responses basic > basic 6`] = `
{
  "input_tokens": 23,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 85,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 108,
}
`;

exports[`@xsai-ext/responses basic > tool calls 1`] = `
[
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777981024,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_194329",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [
        {
          "description": "Adds two numbers",
          "name": "add",
          "parameters": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "a": {
                "description": "First number",
                "type": "string",
              },
              "b": {
                "description": "Second number",
                "type": "string",
              },
            },
            "required": [
              "a",
              "b",
            ],
            "type": "object",
          },
          "strict": true,
          "type": "function",
        },
      ],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 0,
    "type": "response.created",
  },
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777981024,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_194329",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [
        {
          "description": "Adds two numbers",
          "name": "add",
          "parameters": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "a": {
                "description": "First number",
                "type": "string",
              },
              "b": {
                "description": "Second number",
                "type": "string",
              },
            },
            "required": [
              "a",
              "b",
            ],
            "type": "object",
          },
          "strict": true,
          "type": "function",
        },
      ],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 1,
    "type": "response.in_progress",
  },
  {
    "item": {
      "id": "rs_97784",
      "summary": [],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 2,
    "type": "response.output_item.added",
  },
  {
    "delta": "The",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 3,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " user",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 4,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " is",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 5,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " asking",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 6,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 7,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 8,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " find",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 9,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 10,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " total",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 11,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " of",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 12,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 13,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 14,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 15,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "5",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 16,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 17,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 18,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " plus",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 19,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 20,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 21,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 22,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 23,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "8",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 24,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 25,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "0",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 26,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 27,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 28,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " they",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 29,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " want",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 30,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 31,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 32,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " use",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 33,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 34,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " \`",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 35,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "add",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 36,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "\`",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 37,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " tool",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 38,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 39,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " solve",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 40,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " this",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 41,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 42,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "

I",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 43,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " need",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 44,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 45,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " use",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 46,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 47,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " add",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 48,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " tool",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 49,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 50,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " which",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 51,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " takes",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 52,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " two",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 53,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " numbers",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 54,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " as",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 55,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " input",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 56,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 57,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " The",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 58,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " user",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 59,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " wants",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 60,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 61,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " sum",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 62,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " of",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 63,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 64,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 65,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 66,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "5",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 67,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 68,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 69,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 70,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 71,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 72,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 73,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 74,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "8",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 75,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 76,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "0",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 77,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 78,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "

I",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 79,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " should",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 80,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " call",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 81,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 82,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " add",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 83,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " tool",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 84,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " with",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 85,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " both",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 86,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " numbers",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 87,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 88,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "item_id": "rs_97784",
    "output_index": 0,
    "sequence_number": 89,
    "summary_index": 0,
    "text": "The user is asking me to find the total of 114514 plus 1919810, and they want me to use the \`add\` tool to solve this.

I need to use the add tool, which takes two numbers as input. The user wants the sum of 114514 and 1919810.

I should call the add tool with both numbers.",
    "type": "response.reasoning_summary_text.done",
  },
  {
    "item": {
      "encrypted_content": "The user is asking me to find the total of 114514 plus 1919810, and they want me to use the \`add\` tool to solve this.

I need to use the add tool, which takes two numbers as input. The user wants the sum of 114514 and 1919810.

I should call the add tool with both numbers.",
      "id": "rs_97784",
      "summary": [
        {
          "text": "The user is asking me to find the total of 114514 plus 1919810, and they want me to use the \`add\` tool to solve this.

I need to use the add tool, which takes two numbers as input. The user wants the sum of 114514 and 1919810.

I should call the add tool with both numbers.",
          "type": "summary_text",
        },
      ],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 90,
    "type": "response.output_item.done",
  },
  {
    "item": {
      "arguments": "",
      "call_id": "call_nkatrp66",
      "id": "fc_422814_0",
      "name": "add",
      "status": "in_progress",
      "type": "function_call",
    },
    "output_index": 1,
    "sequence_number": 91,
    "type": "response.output_item.added",
  },
  {
    "delta": "{"a":"114514","b":"1919810"}",
    "item_id": "fc_422814_0",
    "output_index": 1,
    "sequence_number": 92,
    "type": "response.function_call_arguments.delta",
  },
  {
    "arguments": "{"a":"114514","b":"1919810"}",
    "item_id": "fc_422814_0",
    "output_index": 1,
    "sequence_number": 93,
    "type": "response.function_call_arguments.done",
  },
  {
    "item": {
      "arguments": "{"a":"114514","b":"1919810"}",
      "call_id": "call_nkatrp66",
      "id": "fc_422814_0",
      "name": "add",
      "status": "completed",
      "type": "function_call",
    },
    "output_index": 1,
    "sequence_number": 94,
    "type": "response.output_item.done",
  },
  {
    "response": {
      "background": false,
      "completed_at": 1777981024,
      "created_at": 1777981024,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_194329",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [
        {
          "encrypted_content": "The user is asking me to find the total of 114514 plus 1919810, and they want me to use the \`add\` tool to solve this.

I need to use the add tool, which takes two numbers as input. The user wants the sum of 114514 and 1919810.

I should call the add tool with both numbers.",
          "id": "rs_97784",
          "summary": [
            {
              "text": "The user is asking me to find the total of 114514 plus 1919810, and they want me to use the \`add\` tool to solve this.

I need to use the add tool, which takes two numbers as input. The user wants the sum of 114514 and 1919810.

I should call the add tool with both numbers.",
              "type": "summary_text",
            },
          ],
          "type": "reasoning",
        },
        {
          "arguments": "{"a":"114514","b":"1919810"}",
          "call_id": "call_nkatrp66",
          "id": "fc_422814_0",
          "name": "add",
          "status": "completed",
          "type": "function_call",
        },
      ],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "completed",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [
        {
          "description": "Adds two numbers",
          "name": "add",
          "parameters": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "a": {
                "description": "First number",
                "type": "string",
              },
              "b": {
                "description": "Second number",
                "type": "string",
              },
            },
            "required": [
              "a",
              "b",
            ],
            "type": "object",
          },
          "strict": true,
          "type": "function",
        },
      ],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": {
        "input_tokens": 333,
        "input_tokens_details": {
          "cached_tokens": 0,
        },
        "output_tokens": 141,
        "output_tokens_details": {
          "reasoning_tokens": 0,
        },
        "total_tokens": 474,
      },
    },
    "sequence_number": 95,
    "type": "response.completed",
  },
]
`;

exports[`@xsai-ext/responses basic > tool calls 2`] = `
[
  {
    "type": "step.start",
  },
  {
    "outputIndex": 0,
    "type": "reasoning.start",
  },
  {
    "delta": "The",
    "type": "reasoning.delta",
  },
  {
    "delta": " user",
    "type": "reasoning.delta",
  },
  {
    "delta": " is",
    "type": "reasoning.delta",
  },
  {
    "delta": " asking",
    "type": "reasoning.delta",
  },
  {
    "delta": " me",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " find",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " total",
    "type": "reasoning.delta",
  },
  {
    "delta": " of",
    "type": "reasoning.delta",
  },
  {
    "delta": " 1",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": "5",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": " plus",
    "type": "reasoning.delta",
  },
  {
    "delta": " 1",
    "type": "reasoning.delta",
  },
  {
    "delta": "9",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "9",
    "type": "reasoning.delta",
  },
  {
    "delta": "8",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "0",
    "type": "reasoning.delta",
  },
  {
    "delta": ",",
    "type": "reasoning.delta",
  },
  {
    "delta": " and",
    "type": "reasoning.delta",
  },
  {
    "delta": " they",
    "type": "reasoning.delta",
  },
  {
    "delta": " want",
    "type": "reasoning.delta",
  },
  {
    "delta": " me",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " use",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " \`",
    "type": "reasoning.delta",
  },
  {
    "delta": "add",
    "type": "reasoning.delta",
  },
  {
    "delta": "\`",
    "type": "reasoning.delta",
  },
  {
    "delta": " tool",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " solve",
    "type": "reasoning.delta",
  },
  {
    "delta": " this",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "delta": "

I",
    "type": "reasoning.delta",
  },
  {
    "delta": " need",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " use",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " add",
    "type": "reasoning.delta",
  },
  {
    "delta": " tool",
    "type": "reasoning.delta",
  },
  {
    "delta": ",",
    "type": "reasoning.delta",
  },
  {
    "delta": " which",
    "type": "reasoning.delta",
  },
  {
    "delta": " takes",
    "type": "reasoning.delta",
  },
  {
    "delta": " two",
    "type": "reasoning.delta",
  },
  {
    "delta": " numbers",
    "type": "reasoning.delta",
  },
  {
    "delta": " as",
    "type": "reasoning.delta",
  },
  {
    "delta": " input",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "delta": " The",
    "type": "reasoning.delta",
  },
  {
    "delta": " user",
    "type": "reasoning.delta",
  },
  {
    "delta": " wants",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " sum",
    "type": "reasoning.delta",
  },
  {
    "delta": " of",
    "type": "reasoning.delta",
  },
  {
    "delta": " 1",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": "5",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": " and",
    "type": "reasoning.delta",
  },
  {
    "delta": " 1",
    "type": "reasoning.delta",
  },
  {
    "delta": "9",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "9",
    "type": "reasoning.delta",
  },
  {
    "delta": "8",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "0",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "delta": "

I",
    "type": "reasoning.delta",
  },
  {
    "delta": " should",
    "type": "reasoning.delta",
  },
  {
    "delta": " call",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " add",
    "type": "reasoning.delta",
  },
  {
    "delta": " tool",
    "type": "reasoning.delta",
  },
  {
    "delta": " with",
    "type": "reasoning.delta",
  },
  {
    "delta": " both",
    "type": "reasoning.delta",
  },
  {
    "delta": " numbers",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "text": "The user is asking me to find the total of 114514 plus 1919810, and they want me to use the \`add\` tool to solve this.

I need to use the add tool, which takes two numbers as input. The user wants the sum of 114514 and 1919810.

I should call the add tool with both numbers.",
    "type": "reasoning.done",
  },
  {
    "outputIndex": 1,
    "type": "tool-call.start",
  },
  {
    "delta": "{"a":"114514","b":"1919810"}",
    "type": "tool-call.delta",
  },
  {
    "toolCall": {
      "arguments": "{"a":"114514","b":"1919810"}",
      "id": "call_nkatrp66",
      "name": "add",
    },
    "type": "tool-call.done",
  },
  {
    "toolResult": {
      "id": "call_nkatrp66",
      "name": "add",
      "output": "2034324",
    },
    "type": "tool-result.done",
  },
  {
    "output": [
      {
        "encrypted_content": "The user is asking me to find the total of 114514 plus 1919810, and they want me to use the \`add\` tool to solve this.

I need to use the add tool, which takes two numbers as input. The user wants the sum of 114514 and 1919810.

I should call the add tool with both numbers.",
        "id": "rs_97784",
        "summary": [
          {
            "text": "The user is asking me to find the total of 114514 plus 1919810, and they want me to use the \`add\` tool to solve this.

I need to use the add tool, which takes two numbers as input. The user wants the sum of 114514 and 1919810.

I should call the add tool with both numbers.",
            "type": "summary_text",
          },
        ],
        "type": "reasoning",
      },
      {
        "arguments": "{"a":"114514","b":"1919810"}",
        "call_id": "call_nkatrp66",
        "id": "fc_422814_0",
        "name": "add",
        "status": "completed",
        "type": "function_call",
      },
    ],
    "type": "step.done",
    "usage": {
      "input_tokens": 333,
      "input_tokens_details": {
        "cached_tokens": 0,
      },
      "output_tokens": 141,
      "output_tokens_details": {
        "reasoning_tokens": 0,
      },
      "total_tokens": 474,
    },
  },
]
`;

exports[`@xsai-ext/responses basic > tool calls 3`] = `
{
  "input_tokens": 333,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 141,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 474,
}
`;

exports[`@xsai-ext/responses basic > tool calls 4`] = `
{
  "input_tokens": 333,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 141,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 474,
}
`;
